Closed
Bug 484820
Opened 12 years ago
Closed 12 years ago
[FIX]HTML content sink doesn't always notify on kids of <head>
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: bzbarsky, Assigned: bzbarsky)
References
Details
Attachments
(1 file)
695 bytes,
patch
|
mrbkap
:
review+
mrbkap
:
superreview+
|
Details | Diff | Splinter Review |
In particular, this caused test failures when I fixed bug 481440 because the <title> didn't get notified on. Sadly, I can't seem to find a way to reproduce this without that patch; if I flush layout before the <title> is parsed and set head and title do display:block the title still shows up in the rendering...
Attachment #368915 -
Flags: superreview?(jst)
Attachment #368915 -
Flags: review?(bent.mozilla)
Updated•12 years ago
|
Attachment #368915 -
Flags: superreview?(jst)
Attachment #368915 -
Flags: superreview+
Attachment #368915 -
Flags: review?(bent.mozilla)
Attachment #368915 -
Flags: review+
![]() |
Assignee | |
Comment 1•12 years ago
|
||
Pushed http://hg.mozilla.org/mozilla-central/rev/9799dde18edb
Status: NEW → RESOLVED
Closed: 12 years ago
Flags: in-testsuite?
Resolution: --- → FIXED
Updated•2 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•