Bug 484820.  When closing the head context, flush out notifications on its kids, so we won't forget to notify on them.  r+sr=mrbkap